update page view in empty data

--- a/retailCRM/templates/salescall/callrecord_list.html
+++ b/retailCRM/templates/salescall/callrecord_list.html
@@ -129,6 +129,10 @@
                                     <td class="text-center next-date">{{ record.nextdate|date:'Y-m-d' }}</td>
                                     <td class="sponsor">{{ record.author|id_fullname }}</td>
                                 </tr>
+                            {% empty %}
+                                <tr>
+                                    <td colspan="9" class="text-center">目前尚無任何紀錄。</td>
+                                </tr>
                             {% endfor %}
                             </tbody>
                         </table>
