--- a/retailCRM/templates/core/custom.html
+++ b/retailCRM/templates/core/custom.html
@@ -75,6 +75,10 @@
                                 <td class="sponsor">{{ company.sponsor|id_fullname  }}</td>
                                 <td class="text-end">{{ company.callrecords.last.calldate|datedelta }}</td>
                             </tr>
+                        {% empty %}
+                            <tr>
+                                <td colspan="10" class="text-center">目前尚無資料。</td>
+                            </tr>
                         {% endfor %}
                         </tbody>
                     </table>
