update username view in page

--- a/retailCRM/templates/core/custom_detail.html
+++ b/retailCRM/templates/core/custom_detail.html
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <small>負責人：{{ company.sponsor.username }}, 客戶狀態：{{ company.status|default_if_none:'無' }}, 上次拜訪時間：{{ company.callrecords.last.calldate|datedelta }}</small>
+                <small>負責人：{{ company.sponsor|id_fullname }}, 客戶狀態：{{ company.status|default_if_none:'無' }}, 上次拜訪時間：{{ company.callrecords.last.calldate|datedelta }}</small>
             </div>
             <div class="col-sm-6 text-end">
                 <small class="">更新時間：{{ company.update_time|date:"Y-m-d H:i" }}, 新增時間：{{ company.add_time|date:"Y-m-d H:i" }}</small>
