--- a/retailCRM/templates/salescall/record_detail.html
+++ b/retailCRM/templates/salescall/record_detail.html
@@ -23,7 +23,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 text-end">
-                <small class="">負責人：{{ record.author.username }}, 更新時間：{{ record.update_time|date:"Y-m-d H:i" }}, 新增時間：{{ record.add_time|date:"Y-m-d H:i" }}</small>
+                <small class="">負責人：{{ record.author|id_fullname }}, 更新時間：{{ record.update_time|date:"Y-m-d H:i" }}, 新增時間：{{ record.add_time|date:"Y-m-d H:i" }}</small>
             </div>
             {% if record.author.id == request.user.id and record.is_draft %}
             <div class="col-8 my-4">
