fix custom_detail.html link error

--- a/retailCRM/templates/core/custom_detail.html
+++ b/retailCRM/templates/core/custom_detail.html
@@ -103,7 +103,7 @@
                 公司網站：
             </div>
             <div class="col-10">
-                <strong>{% if company.website %}<a href="http://{{ company.website }}">{{ company.website }}</a>{% endif %}</strong>
+                <strong>{% if company.website %}<a href="{{ company.website }}">{{ company.website }}</a>{% endif %}</strong>
             </div>
             <div class="col-2">
                 主要聯絡人：
