- change column title - add order of "State" in Company form - change show table in State admin site

--- a/retailCRM/templates/core/custom.html
+++ b/retailCRM/templates/core/custom.html
@@ -56,7 +56,7 @@
                                 <th scope="col" class="text-end sort" data-sort="inquire">需求量(度/年)</th>
                                 <th scope="col" class="text-end sort" data-sort="price">報價(元/度)</th>
                                 <th scope="col" class="text-end sort" data-sort="duration">合約(年)</th>
-                                <th scope="col" class="text-center sort" data-sort="status">詢問狀態</th>
+                                <th scope="col" class="text-center sort" data-sort="status">開發階段</th>
                                 <th scope="col" class="sort" data-sort="sponsor">負責人</th>
                                 <th scope="col" class="text-end">最後連絡</th>
                             </tr>
