--- a/retailCRM/templates/index.html
+++ b/retailCRM/templates/index.html
@@ -75,7 +75,7 @@
                                 <th class="text-end sort" data-sort="inquire">需求量(度/年)</th>
                                 <th class="text-end sort" data-sort="price">報價(元/度)</th>
                                 <th class="text-end sort" data-sort="duration">合約(年)</th>
-                                <th class="sort" data-sort="status">詢問狀態</th>
+                                <th class="sort" data-sort="status">開發階段</th>
                                 <th>負責人</th>
                                 <th>最後連絡</th>
                             </tr>
