--- a/retailCRM/templates/salescall/record_update.html
+++ b/retailCRM/templates/salescall/record_update.html
@@ -42,7 +42,7 @@
                     {{ form.calltype }}
                 </div>
                 <div class="col-3">
-                    <label for="{{ pwrform.status.auto_id }}" class="form-label">客戶狀態:</label>
+                    <label for="{{ pwrform.status.auto_id }}" class="form-label">開發階段:</label>
                     {{ pwrform.status }}
                 </div>
                 <div class="col-3">
